Improve early class initializer analysis