@@ -4,7 +4,9 @@
  *
  * This code is free software; you can redistribute it and/or modify it
  * under the terms of the GNU General Public License version 2 only, as
- * published by the Free Software Foundation.
+ * published by the Free Software Foundation.  Oracle designates this
+ * particular file as subject to the "Classpath" exception as provided
+ * by Oracle in the LICENSE file that accompanied this code.
  *
  * This code is distributed in the hope that it will be useful, but WITHOUT
  * ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
@@ -23,12 +25,15 @@
 
 package com.oracle.svm.hosted.substitute;
 
+import static com.oracle.svm.core.annotate.RecomputeFieldValue.Kind.ArrayBaseOffset;
+import static com.oracle.svm.core.annotate.RecomputeFieldValue.Kind.ArrayIndexScale;
+import static com.oracle.svm.core.annotate.RecomputeFieldValue.Kind.ArrayIndexShift;
+import static com.oracle.svm.core.annotate.RecomputeFieldValue.Kind.FieldOffset;
 import static org.graalvm.compiler.nodes.graphbuilderconf.InlineInvokePlugin.InlineInfo.createStandardInlineInfo;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
@@ -39,12 +44,15 @@ import java.util.stream.Collectors;
 
 import org.graalvm.compiler.api.replacements.SnippetReflectionProvider;
 import org.graalvm.compiler.debug.DebugContext;
-import org.graalvm.compiler.debug.DebugHandlersFactory;
+import org.graalvm.compiler.debug.DebugContext.Builder;
 import org.graalvm.compiler.graph.Node;
 import org.graalvm.compiler.graph.iterators.NodeIterable;
 import org.graalvm.compiler.java.GraphBuilderPhase;
+import org.graalvm.compiler.nodes.FrameState;
 import org.graalvm.compiler.nodes.Invoke;
+import org.graalvm.compiler.nodes.InvokeWithExceptionNode;
 import org.graalvm.compiler.nodes.StructuredGraph;
+import org.graalvm.compiler.nodes.StructuredGraph.GuardsStage;
 import org.graalvm.compiler.nodes.ValueNode;
 import org.graalvm.compiler.nodes.calc.SignExtendNode;
 import org.graalvm.compiler.nodes.calc.SubNode;
@@ -59,19 +67,26 @@ import org.graalvm.compiler.nodes.java.StoreFieldNode;
 import org.graalvm.compiler.options.Option;
 import org.graalvm.compiler.options.OptionValues;
 import org.graalvm.compiler.phases.OptimisticOptimizations;
+import org.graalvm.compiler.phases.common.CanonicalizerPhase;
 import org.graalvm.compiler.phases.tiers.HighTierContext;
-import org.graalvm.nativeimage.Feature;
-import org.graalvm.nativeimage.ImageSingletons;
+import org.graalvm.compiler.serviceprovider.JavaVersionUtil;
+import org.graalvm.nativeimage.hosted.Feature;
 
 import com.oracle.graal.pointsto.infrastructure.SubstitutionProcessor;
 import com.oracle.graal.pointsto.meta.AnalysisType;
+import com.oracle.svm.core.ParsingReason;
 import com.oracle.svm.core.annotate.AutomaticFeature;
 import com.oracle.svm.core.annotate.RecomputeFieldValue;
 import com.oracle.svm.core.annotate.RecomputeFieldValue.Kind;
 import com.oracle.svm.core.option.HostedOptionKey;
 import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.hosted.FeatureImpl.DuringAnalysisAccessImpl;
+import com.oracle.svm.hosted.ImageClassLoader;
+import com.oracle.svm.hosted.SVMHost;
 import com.oracle.svm.hosted.c.GraalAccess;
+import com.oracle.svm.hosted.classinitialization.ClassInitializerGraphBuilderPhase;
+import com.oracle.svm.hosted.phases.NoClassInitializationPlugin;
+import com.oracle.svm.hosted.snippets.ReflectionPlugins;
 
 import jdk.vm.ci.meta.JavaKind;
 import jdk.vm.ci.meta.MetaAccessProvider;
@@ -86,7 +101,7 @@ class AutomaticSubstitutionFeature implements Feature {
     @Override
     public void duringAnalysis(DuringAnalysisAccess access) {
         DuringAnalysisAccessImpl accessImpl = (DuringAnalysisAccessImpl) access;
-        UnsafeAutomaticSubstitutionProcessor automaticSubstitutions = ImageSingletons.lookup(UnsafeAutomaticSubstitutionProcessor.class);
+        UnsafeAutomaticSubstitutionProcessor automaticSubstitutions = accessImpl.getHostVM().getAutomaticSubstitutionProcessor();
         automaticSubstitutions.processComputedValueFields(accessImpl);
     }
 
@@ -111,50 +126,112 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
     private final AnnotationSubstitutionProcessor annotationSubstitutions;
     private final Map<ResolvedJavaField, ComputedValueField> fieldSubstitutions;
 
-    private final List<ResolvedJavaType> supressWarnings;
+    private final List<ResolvedJavaType> suppressWarnings;
 
-    private ResolvedJavaMethod unsafeObjectFieldOffsetMethod;
+    private static ResolvedJavaType resolvedUnsafeClass;
+
+    private ResolvedJavaMethod unsafeObjectFieldOffsetFieldMethod;
+    private ResolvedJavaMethod unsafeObjectFieldOffsetClassStringMethod;
     private ResolvedJavaMethod unsafeArrayBaseOffsetMethod;
     private ResolvedJavaMethod unsafeArrayIndexScaleMethod;
-    private ResolvedJavaMethod classGetDeclaredFieldMethod;
     private ResolvedJavaMethod integerNumberOfLeadingZerosMethod;
 
-    private GraphBuilderPhase builderPhase;
+    private HashSet<ResolvedJavaMethod> neverInlineSet = new HashSet<>();
+    private HashSet<ResolvedJavaMethod> noCheckedExceptionsSet = new HashSet<>();
 
-    public UnsafeAutomaticSubstitutionProcessor(AnnotationSubstitutionProcessor annotationSubstitutions) {
+    private Plugins plugins;
+
+    private SnippetReflectionProvider snippetReflection;
+
+    public UnsafeAutomaticSubstitutionProcessor(AnnotationSubstitutionProcessor annotationSubstitutions, SnippetReflectionProvider snippetReflection) {
+        this.snippetReflection = snippetReflection;
         this.annotationSubstitutions = annotationSubstitutions;
         this.fieldSubstitutions = new ConcurrentHashMap<>();
-        this.supressWarnings = new ArrayList<>();
+        this.suppressWarnings = new ArrayList<>();
     }
 
-    public void init(MetaAccessProvider originalMetaAccess) {
+    public void init(ImageClassLoader loader, MetaAccessProvider originalMetaAccess) {
         ResolvedJavaMethod atomicIntegerFieldUpdaterNewUpdaterMethod;
         ResolvedJavaMethod atomicLongFieldUpdaterNewUpdaterMethod;
         ResolvedJavaMethod atomicReferenceFieldUpdaterNewUpdaterMethod;
+
+        ResolvedJavaMethod fieldSetAccessibleMethod;
+        ResolvedJavaMethod fieldGetMethod;
+
         try {
-            Method unsafeObjectFieldOffset = sun.misc.Unsafe.class.getMethod("objectFieldOffset", java.lang.reflect.Field.class);
-            unsafeObjectFieldOffsetMethod = originalMetaAccess.lookupJavaMethod(unsafeObjectFieldOffset);
 
-            Method unsafeArrayBaseOffset = sun.misc.Unsafe.class.getMethod("arrayBaseOffset", java.lang.Class.class);
+            Method fieldSetAccessible = Field.class.getMethod("setAccessible", boolean.class);
+            fieldSetAccessibleMethod = originalMetaAccess.lookupJavaMethod(fieldSetAccessible);
+            neverInlineSet.add(fieldSetAccessibleMethod);
+
+            Method fieldGet = Field.class.getMethod("get", Object.class);
+            fieldGetMethod = originalMetaAccess.lookupJavaMethod(fieldGet);
+            neverInlineSet.add(fieldGetMethod);
+
+            if (JavaVersionUtil.JAVA_SPEC > 8) {
+                /*
+                 * Various factory methods in VarHandle query the array base/index or field offsets.
+                 * There is no need to analyze these calls because VarHandle accesses are
+                 * intrinsified to simple array and field access nodes in
+                 * IntrinsifyMethodHandlesInvocationPlugin.
+                 */
+                for (Method method : loader.findClassOrFail("java.lang.invoke.VarHandles").getDeclaredMethods()) {
+                    neverInlineSet.add(originalMetaAccess.lookupJavaMethod(method));
+                }
+            }
+
+            Class<?> unsafeClass;
+
+            try {
+                if (JavaVersionUtil.JAVA_SPEC <= 8) {
+                    unsafeClass = Class.forName("sun.misc.Unsafe");
+                } else {
+                    unsafeClass = Class.forName("jdk.internal.misc.Unsafe");
+                }
+            } catch (ClassNotFoundException cnfe) {
+                throw VMError.shouldNotReachHere(cnfe);
+            }
+
+            resolvedUnsafeClass = originalMetaAccess.lookupJavaType(unsafeClass);
+
+            Method unsafeObjectFieldOffset = unsafeClass.getMethod("objectFieldOffset", java.lang.reflect.Field.class);
+            unsafeObjectFieldOffsetFieldMethod = originalMetaAccess.lookupJavaMethod(unsafeObjectFieldOffset);
+            noCheckedExceptionsSet.add(unsafeObjectFieldOffsetFieldMethod);
+            neverInlineSet.add(unsafeObjectFieldOffsetFieldMethod);
+
+            if (JavaVersionUtil.JAVA_SPEC >= 11) {
+                /* JDK 11 and later have Unsafe.objectFieldOffset(Class, String). */
+                Method unsafeObjectClassStringOffset = unsafeClass.getMethod("objectFieldOffset", java.lang.Class.class, String.class);
+                unsafeObjectFieldOffsetClassStringMethod = originalMetaAccess.lookupJavaMethod(unsafeObjectClassStringOffset);
+                noCheckedExceptionsSet.add(unsafeObjectFieldOffsetClassStringMethod);
+                neverInlineSet.add(unsafeObjectFieldOffsetClassStringMethod);
+            }
+
+            Method unsafeArrayBaseOffset = unsafeClass.getMethod("arrayBaseOffset", java.lang.Class.class);
             unsafeArrayBaseOffsetMethod = originalMetaAccess.lookupJavaMethod(unsafeArrayBaseOffset);
+            noCheckedExceptionsSet.add(unsafeArrayBaseOffsetMethod);
+            neverInlineSet.add(unsafeArrayBaseOffsetMethod);
 
-            Method unsafeArrayIndexScale = sun.misc.Unsafe.class.getMethod("arrayIndexScale", java.lang.Class.class);
+            Method unsafeArrayIndexScale = unsafeClass.getMethod("arrayIndexScale", java.lang.Class.class);
             unsafeArrayIndexScaleMethod = originalMetaAccess.lookupJavaMethod(unsafeArrayIndexScale);
-
-            Method classGetDeclaredField = java.lang.Class.class.getMethod("getDeclaredField", String.class);
-            classGetDeclaredFieldMethod = originalMetaAccess.lookupJavaMethod(classGetDeclaredField);
+            noCheckedExceptionsSet.add(unsafeArrayIndexScaleMethod);
+            neverInlineSet.add(unsafeArrayIndexScaleMethod);
 
             Method integerNumberOfLeadingZeros = java.lang.Integer.class.getMethod("numberOfLeadingZeros", int.class);
             integerNumberOfLeadingZerosMethod = originalMetaAccess.lookupJavaMethod(integerNumberOfLeadingZeros);
+            neverInlineSet.add(integerNumberOfLeadingZerosMethod);
 
             Method atomicIntegerFieldUpdaterNewUpdater = java.util.concurrent.atomic.AtomicIntegerFieldUpdater.class.getMethod("newUpdater", Class.class, String.class);
             atomicIntegerFieldUpdaterNewUpdaterMethod = originalMetaAccess.lookupJavaMethod(atomicIntegerFieldUpdaterNewUpdater);
+            neverInlineSet.add(atomicIntegerFieldUpdaterNewUpdaterMethod);
 
             Method atomicLongFieldUpdaterNewUpdater = java.util.concurrent.atomic.AtomicLongFieldUpdater.class.getMethod("newUpdater", Class.class, String.class);
             atomicLongFieldUpdaterNewUpdaterMethod = originalMetaAccess.lookupJavaMethod(atomicLongFieldUpdaterNewUpdater);
+            neverInlineSet.add(atomicLongFieldUpdaterNewUpdaterMethod);
 
             Method atomicReferenceFieldUpdaterNewUpdater = java.util.concurrent.atomic.AtomicReferenceFieldUpdater.class.getMethod("newUpdater", Class.class, Class.class, String.class);
             atomicReferenceFieldUpdaterNewUpdaterMethod = originalMetaAccess.lookupJavaMethod(atomicReferenceFieldUpdaterNewUpdater);
+            neverInlineSet.add(atomicReferenceFieldUpdaterNewUpdaterMethod);
 
         } catch (NoSuchMethodException e) {
             throw VMError.shouldNotReachHere(e);
@@ -162,33 +239,33 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
 
         /*
          * Create the GraphBuilderPhase which builds the graph for the static initializers.
-         * 
+         *
          * The builder phase will inline the first level callees to detect cases where the offset
          * computation is performed by methods that wrap over the unsafe API. There are two
          * exceptions:
-         * 
+         *
          * 1. Don't inline the invokes that we are trying to match.
-         * 
+         *
          * 2. Don't inline Atomic*FieldUpdater.newUpdater() methods as they lead to false errors.
          * These methods reach calls to Unsafe.objectFieldOffset() whose value is recomputed by
          * RecomputeFieldValue.Kind.AtomicFieldUpdaterOffset.
          */
-        ResolvedJavaMethod[] neverInline = {unsafeObjectFieldOffsetMethod, unsafeArrayBaseOffsetMethod, unsafeArrayIndexScaleMethod,
-                        classGetDeclaredFieldMethod, integerNumberOfLeadingZerosMethod,
-                        atomicIntegerFieldUpdaterNewUpdaterMethod, atomicLongFieldUpdaterNewUpdaterMethod, atomicReferenceFieldUpdaterNewUpdaterMethod};
-        StaticInitializerInlineInvokePlugin inlineInvokePlugin = new StaticInitializerInlineInvokePlugin(neverInline);
+        StaticInitializerInlineInvokePlugin inlineInvokePlugin = new StaticInitializerInlineInvokePlugin(neverInlineSet);
 
-        Plugins plugins = new Plugins(new InvocationPlugins());
+        plugins = new Plugins(new InvocationPlugins());
         plugins.appendInlineInvokePlugin(inlineInvokePlugin);
+        NoClassInitializationPlugin classInitializationPlugin = new NoClassInitializationPlugin();
+        plugins.setClassInitializationPlugin(classInitializationPlugin);
 
-        builderPhase = new GraphBuilderPhase(GraphBuilderConfiguration.getDefault(plugins));
+        ReflectionPlugins.registerInvocationPlugins(loader, snippetReflection, annotationSubstitutions, classInitializationPlugin, plugins.getInvocationPlugins(), null,
+                        ParsingReason.UnsafeSubstitutionAnalysis);
 
         /*
          * Analyzing certain classes leads to false errors. We disable reporting for those classes
          * by default.
          */
         try {
-            supressWarnings.add(originalMetaAccess.lookupJavaType(Class.forName("sun.security.provider.ByteArrayAccess")));
+            suppressWarnings.add(originalMetaAccess.lookupJavaType(Class.forName("sun.security.provider.ByteArrayAccess")));
         } catch (ClassNotFoundException e) {
             throw VMError.shouldNotReachHere(e);
         }
@@ -198,7 +275,7 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
      * Post-process computed value fields during analysis, e.g, like registering the target field of
      * field offset computation as unsafe accessed. Operations that lookup fields/methods/types in
      * the analysis universe cannot be executed while the substitution is computed. The call to
-     * {@link #computeSubstitutions(ResolvedJavaType, OptionValues)} is made from
+     * {@link #computeSubstitutions} is made from
      * com.oracle.graal.pointsto.meta.AnalysisUniverse#createType(ResolvedJavaType), before the type
      * is published. Thus if there is a circular dependency between the processed type and one of
      * the fields/methods/types that it needs to access it might lead to a deadlock in
@@ -213,7 +290,9 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
 
                 switch (cvField.getRecomputeValueKind()) {
                     case FieldOffset:
-                        if (access.registerAsUnsafeAccessed(cvField.getTargetField())) {
+                        Field targetField = cvField.getTargetField();
+                        access.getMetaAccess().lookupJavaType(targetField.getDeclaringClass()).registerAsReachable();
+                        if (access.registerAsUnsafeAccessed(access.getMetaAccess().lookupJavaField(targetField))) {
                             access.requireAnalysisIteration();
                         }
                         break;
@@ -237,22 +316,50 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
     }
 
     @SuppressWarnings("try")
-    public void computeSubstitutions(ResolvedJavaType hostType, OptionValues options) {
+    public void computeSubstitutions(SVMHost hostVM, ResolvedJavaType hostType, OptionValues options) {
         if (hostType.isArray()) {
+            return;
+        }
+        if (hostVM.getClassInitializationSupport().shouldInitializeAtRuntime(hostType)) {
+            /*
+             * The class initializer of this type is executed at run time. The methods in Unsafe are
+             * substituted to return the correct value at image runtime, or fail if the field was
+             * not registered for unsafe access.
+             *
+             * Calls to Unsafe.objectFieldOffset() with a constant field parameter are automatically
+             * registered for unsafe access in SubstrateGraphBuilderPlugins. While that logic is a
+             * bit less powerful compared to the parsing in this class (because this class performs
+             * inlining during parsing), it should be sufficient for most cases to automatically
+             * perform the unsafe access registration. And if not, the user needs to provide a
+             * proper manual configuration file.
+             */
+            return;
+        }
+
+        if (annotationSubstitutions.findSubstitution(hostType).isPresent()) {
+            /* If the class is substituted clinit will be eliminated, so bail early. */
+            reportSkippedSubstitution(hostType);
             return;
         }
 
         /* Detect field offset computation in static initializers. */
         ResolvedJavaMethod clinit = hostType.getClassInitializer();
+
         if (clinit != null && clinit.hasBytecodes()) {
-            DebugContext debug = DebugContext.create(options, DebugHandlersFactory.LOADER);
+            /*
+             * Since this analysis is run after the AnalysisType is created at this point the class
+             * should already be linked and clinit should be available.
+             */
+            DebugContext debug = new Builder(options).build();
             try (DebugContext.Scope s = debug.scope("Field offset computation", clinit)) {
                 StructuredGraph clinitGraph = getStaticInitializerGraph(clinit, options, debug);
 
                 for (Invoke invoke : clinitGraph.getInvokes()) {
                     if (invoke.callTarget() instanceof MethodCallTargetNode) {
-                        if (isInvokeTo(invoke, unsafeObjectFieldOffsetMethod)) {
-                            processUnsafeObjectFieldOffsetInvoke(hostType, invoke);
+                        if (isInvokeTo(invoke, unsafeObjectFieldOffsetFieldMethod)) {
+                            processUnsafeObjectFieldOffsetFieldInvoke(hostType, invoke);
+                        } else if (isInvokeTo(invoke, unsafeObjectFieldOffsetClassStringMethod)) {
+                            processUnsafeObjectFieldOffsetClassStringInvoke(hostType, invoke);
                         } else if (isInvokeTo(invoke, unsafeArrayBaseOffsetMethod)) {
                             processUnsafeArrayBaseOffsetInvoke(hostType, invoke);
                         } else if (isInvokeTo(invoke, unsafeArrayIndexScaleMethod)) {
@@ -265,53 +372,93 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
                 throw debug.handle(e);
             }
         }
+
     }
 
     /**
-     * Process call to {@link sun.misc.Unsafe#objectFieldOffset(Field)}. The matching logic below
+     * Process call to <code>Unsafe.objectFieldOffset(Field)</code>. The matching logic below
      * applies to the following code pattern:
-     * 
+     *
      * <code> static final long fieldOffset = Unsafe.getUnsafe().objectFieldOffset(X.class.getDeclaredField("f")); </code>
      */
-    private void processUnsafeObjectFieldOffsetInvoke(ResolvedJavaType type, Invoke unsafeObjectFieldOffsetInvoke) {
-        SnippetReflectionProvider snippetReflectionProvider = GraalAccess.getOriginalSnippetReflection();
-
+    private void processUnsafeObjectFieldOffsetFieldInvoke(ResolvedJavaType type, Invoke unsafeObjectFieldOffsetInvoke) {
         List<String> unsuccessfulReasons = new ArrayList<>();
 
         Class<?> targetFieldHolder = null;
         String targetFieldName = null;
 
         ValueNode fieldArgument = unsafeObjectFieldOffsetInvoke.callTarget().arguments().get(1);
-        if (fieldArgument instanceof Invoke && isInvokeTo((Invoke) fieldArgument, classGetDeclaredFieldMethod)) {
-            Invoke getDeclaredFieldInvoke = (Invoke) fieldArgument;
-            /*
-             * If the first argument of Unsafe.objectFieldOffset() is a call to
-             * Class.getDeclaredField() and the arguments of Class.getDeclaredField(), i.e., the
-             * class and the field name, are constants then unwrap them.
-             */
-            ValueNode holderClassNode = getDeclaredFieldInvoke.callTarget().arguments().get(0);
-            if (holderClassNode.isJavaConstant()) {
-                targetFieldHolder = snippetReflectionProvider.asObject(Class.class, holderClassNode.asJavaConstant());
+        if (fieldArgument.isConstant()) {
+            Field field = snippetReflection.asObject(Field.class, fieldArgument.asJavaConstant());
+            if (field == null) {
+                unsuccessfulReasons.add("The argument of Unsafe.objectFieldOffset() is a null constant.");
             } else {
-                unsuccessfulReasons.add("The receiver of the call to Class.getDeclaredField(), i.e., the field holder class, is not a constant.");
-            }
-
-            ValueNode fieldNameNode = getDeclaredFieldInvoke.callTarget().arguments().get(1);
-            if (fieldNameNode.isJavaConstant()) {
-                targetFieldName = snippetReflectionProvider.asObject(String.class, fieldNameNode.asJavaConstant());
-            } else {
-                unsuccessfulReasons.add("The first argument of the call to Class.getDeclaredField(), i.e., the field name, is not a constant.");
+                targetFieldHolder = field.getDeclaringClass();
+                targetFieldName = field.getName();
             }
         } else {
-            unsuccessfulReasons.add("The first argument of Unsafe.objectFieldOffset() is not a call to Class.getDeclaredField()");
+            unsuccessfulReasons.add("The argument of Unsafe.objectFieldOffset(Field) is not a constant field.");
         }
+        processUnsafeObjectFieldOffsetInvoke(type, unsafeObjectFieldOffsetInvoke, unsuccessfulReasons, targetFieldHolder, targetFieldName);
+    }
+
+    /**
+     * Process call to <code>Unsafe.objectFieldOffset(Class<?> class, String name)</code>. The
+     * matching logic below applies to the following code pattern:
+     *
+     * <code> static final long fieldOffset = Unsafe.getUnsafe().objectFieldOffset(X.class, "f"); </code>
+     */
+    private void processUnsafeObjectFieldOffsetClassStringInvoke(ResolvedJavaType type, Invoke unsafeObjectFieldOffsetInvoke) {
+        List<String> unsuccessfulReasons = new ArrayList<>();
+
+        Class<?> targetFieldHolder = null;
+        String targetFieldName = null;
+
+        ValueNode classArgument = unsafeObjectFieldOffsetInvoke.callTarget().arguments().get(1);
+        if (classArgument.isConstant()) {
+            Class<?> clazz = snippetReflection.asObject(Class.class, classArgument.asJavaConstant());
+            if (clazz == null) {
+                unsuccessfulReasons.add("The Class argument of Unsafe.objectFieldOffset(Class, String) is a null constant.");
+            } else {
+                targetFieldHolder = clazz;
+            }
+        } else {
+            unsuccessfulReasons.add("The Class argument of Unsafe.objectFieldOffset(Class, String) is not a constant class.");
+        }
+
+        ValueNode nameArgument = unsafeObjectFieldOffsetInvoke.callTarget().arguments().get(2);
+        if (nameArgument.isConstant()) {
+            String fieldName = snippetReflection.asObject(String.class, nameArgument.asJavaConstant());
+            if (fieldName == null) {
+                unsuccessfulReasons.add("The String argument of Unsafe.objectFieldOffset(Class, String) is a null String.");
+            } else {
+                targetFieldName = fieldName;
+            }
+        } else {
+            unsuccessfulReasons.add("The name argument of Unsafe.objectFieldOffset(Class, String) is not a constant String.");
+        }
+        processUnsafeObjectFieldOffsetInvoke(type, unsafeObjectFieldOffsetInvoke, unsuccessfulReasons, targetFieldHolder, targetFieldName);
+    }
+
+    private void processUnsafeObjectFieldOffsetInvoke(
+                    ResolvedJavaType type,
+                    Invoke unsafeObjectFieldOffsetInvoke,
+                    List<String> unsuccessfulReasons,
+                    Class<?> targetFieldHolder,
+                    String targetFieldName) {
 
         /*
          * If the value returned by the call to Unsafe.objectFieldOffset() is stored into a field
          * then that must be the offset field.
          */
-        ResolvedJavaField offsetField = extractValueStoreField(unsafeObjectFieldOffsetInvoke.asNode(), unsuccessfulReasons);
+        SearchResult result = extractValueStoreField(unsafeObjectFieldOffsetInvoke.asNode(), FieldOffset, unsuccessfulReasons);
 
+        /* No field, but the value doesn't have illegal usages, ignore. */
+        if (result.valueStoreField == null && !result.illegalUseFound) {
+            return;
+        }
+
+        ResolvedJavaField offsetField = result.valueStoreField;
         /*
          * If the target field holder and name, and the offset field were found try to register a
          * substitution.
@@ -319,18 +466,18 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
         if (targetFieldHolder != null && targetFieldName != null && offsetField != null) {
             Class<?> finalTargetFieldHolder = targetFieldHolder;
             String finalTargetFieldName = targetFieldName;
-            Supplier<ComputedValueField> supplier = () -> new ComputedValueField(offsetField, null, Kind.FieldOffset, finalTargetFieldHolder, finalTargetFieldName, false);
-            if (tryAutomaticRecomputation(offsetField, Kind.FieldOffset, supplier)) {
-                reportSuccessfulAutomaticRecomputation(Kind.FieldOffset, offsetField, targetFieldHolder.getName() + "." + targetFieldName);
+            Supplier<ComputedValueField> supplier = () -> new ComputedValueField(offsetField, null, FieldOffset, finalTargetFieldHolder, finalTargetFieldName, false);
+            if (tryAutomaticRecomputation(offsetField, FieldOffset, supplier)) {
+                reportSuccessfulAutomaticRecomputation(FieldOffset, offsetField, targetFieldHolder.getName() + "." + targetFieldName);
             }
         } else {
-            reportUnsuccessfulAutomaticRecomputation(type, unsafeObjectFieldOffsetInvoke, Kind.FieldOffset, unsuccessfulReasons);
+            reportUnsuccessfulAutomaticRecomputation(type, offsetField, unsafeObjectFieldOffsetInvoke, FieldOffset, unsuccessfulReasons);
         }
     }
 
     /**
-     * Process call to {@link sun.misc.Unsafe#arrayBaseOffset(Class)}. The matching logic below
-     * applies to the following code pattern:
+     * Process call to <code>Unsafe.arrayBaseOffset(Class)</code>. The matching logic below applies
+     * to the following code pattern:
      *
      * <code> static final long arrayBaseOffsets = Unsafe.getUnsafe().arrayBaseOffset(byte[].class); </code>
      */
@@ -345,29 +492,33 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
         if (arrayClassArgument.isJavaConstant()) {
             arrayClass = snippetReflectionProvider.asObject(Class.class, arrayClassArgument.asJavaConstant());
         } else {
-            unsuccessfulReasons.add("The first argument of the call to Unsafe.arrayBaseOffset() is not a constant.");
+            unsuccessfulReasons.add("The argument of the call to Unsafe.arrayBaseOffset() is not a constant.");
         }
 
         /*
          * If the value returned by the call to Unsafe.arrayBaseOffset() is stored into a field then
          * that must be the offset field.
          */
-        ResolvedJavaField offsetField = extractValueStoreField(unsafeArrayBaseOffsetInvoke.asNode(), unsuccessfulReasons);
+        SearchResult result = extractValueStoreField(unsafeArrayBaseOffsetInvoke.asNode(), ArrayBaseOffset, unsuccessfulReasons);
 
+        ResolvedJavaField offsetField = result.valueStoreField;
         if (arrayClass != null && offsetField != null) {
             Class<?> finalArrayClass = arrayClass;
-            Supplier<ComputedValueField> supplier = () -> new ComputedValueField(offsetField, null, Kind.ArrayBaseOffset, finalArrayClass, null, true);
-            if (tryAutomaticRecomputation(offsetField, Kind.ArrayBaseOffset, supplier)) {
-                reportSuccessfulAutomaticRecomputation(Kind.ArrayBaseOffset, offsetField, arrayClass.getCanonicalName());
+            Supplier<ComputedValueField> supplier = () -> new ComputedValueField(offsetField, null, ArrayBaseOffset, finalArrayClass, null, true);
+            if (tryAutomaticRecomputation(offsetField, ArrayBaseOffset, supplier)) {
+                reportSuccessfulAutomaticRecomputation(ArrayBaseOffset, offsetField, arrayClass.getCanonicalName());
             }
         } else {
-            reportUnsuccessfulAutomaticRecomputation(type, unsafeArrayBaseOffsetInvoke, Kind.ArrayBaseOffset, unsuccessfulReasons);
+            /* Don't report a failure if the value doesn't have illegal usages. */
+            if (result.illegalUseFound) {
+                reportUnsuccessfulAutomaticRecomputation(type, offsetField, unsafeArrayBaseOffsetInvoke, ArrayBaseOffset, unsuccessfulReasons);
+            }
         }
     }
 
     /**
-     * Process call to {@link sun.misc.Unsafe#arrayIndexScale(Class)}. The matching logic below
-     * applies to the following code pattern:
+     * Process call to <code>Unsafe.arrayIndexScale(Class)</code>. The matching logic below applies
+     * to the following code pattern:
      *
      * <code> static final long byteArrayIndexScale = Unsafe.getUnsafe().arrayIndexScale(byte[].class); </code>
      */
@@ -382,24 +533,25 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
         if (arrayClassArgument.isJavaConstant()) {
             arrayClass = snippetReflectionProvider.asObject(Class.class, arrayClassArgument.asJavaConstant());
         } else {
-            unsuccessfulReasons.add("The first argument of the call to Unsafe.arrayIndexScale() is not a constant.");
+            unsuccessfulReasons.add("The argument of the call to Unsafe.arrayIndexScale() is not a constant.");
         }
 
         /*
          * If the value returned by the call to Unsafe.unsafeArrayIndexScale() is stored into a
          * field then that must be the offset field.
          */
-        ResolvedJavaField indexScaleField = extractValueStoreField(unsafeArrayIndexScale.asNode(), unsuccessfulReasons);
+        SearchResult result = extractValueStoreField(unsafeArrayIndexScale.asNode(), ArrayIndexScale, unsuccessfulReasons);
 
+        ResolvedJavaField indexScaleField = result.valueStoreField;
         boolean indexScaleComputed = false;
         boolean indexShiftComputed = false;
 
         if (arrayClass != null) {
             if (indexScaleField != null) {
                 Class<?> finalArrayClass = arrayClass;
-                Supplier<ComputedValueField> supplier = () -> new ComputedValueField(indexScaleField, null, Kind.ArrayIndexScale, finalArrayClass, null, true);
-                if (tryAutomaticRecomputation(indexScaleField, Kind.ArrayIndexScale, supplier)) {
-                    reportSuccessfulAutomaticRecomputation(Kind.ArrayIndexScale, indexScaleField, arrayClass.getCanonicalName());
+                Supplier<ComputedValueField> supplier = () -> new ComputedValueField(indexScaleField, null, ArrayIndexScale, finalArrayClass, null, true);
+                if (tryAutomaticRecomputation(indexScaleField, ArrayIndexScale, supplier)) {
+                    reportSuccessfulAutomaticRecomputation(ArrayIndexScale, indexScaleField, arrayClass.getCanonicalName());
                     indexScaleComputed = true;
                     /* Try substitution for the array index shift computation if present. */
                     indexShiftComputed = processArrayIndexShiftFromField(type, indexScaleField, arrayClass, clinitGraph);
@@ -413,22 +565,25 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
             }
         }
         if (!indexScaleComputed && !indexShiftComputed) {
-            reportUnsuccessfulAutomaticRecomputation(type, unsafeArrayIndexScale, Kind.ArrayIndexScale, unsuccessfulReasons);
+            /* Don't report a failure if the value doesn't have illegal usages. */
+            if (result.illegalUseFound) {
+                reportUnsuccessfulAutomaticRecomputation(type, indexScaleField, unsafeArrayIndexScale, ArrayIndexScale, unsuccessfulReasons);
+            }
         }
     }
 
     /**
      * Process array index shift computation which usually follows a call to
-     * {@link sun.misc.Unsafe#arrayIndexScale(Class)}. The matching logic below applies to the
-     * following code pattern:
+     * <code>Unsafe.arrayIndexScale(Class)</code>. The matching logic below applies to the following
+     * code pattern:
      *
-     * <code> 
-     *      static final long byteArrayIndexScale = Unsafe.getUnsafe().arrayIndexScale(byte[].class); 
+     * <code>
+     *      static final long byteArrayIndexScale = Unsafe.getUnsafe().arrayIndexScale(byte[].class);
      *      static final long byteArrayIndexShift;
      *      static {
      *          if ((byteArrayIndexScale & (byteArrayIndexScale - 1)) != 0) {
-     *              throw new Error("data type scale not a power of two"); 
-     *          } 
+     *              throw new Error("data type scale not a power of two");
+     *          }
      *          byteArrayIndexShift = 31 - Integer.numberOfLeadingZeros(byteArrayIndexScale);
      *      }
      * </code>
@@ -456,15 +611,15 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
 
     /**
      * Process array index shift computation which usually follows a call to
-     * {@link sun.misc.Unsafe#arrayIndexScale(Class)}. The matching logic below applies to the
-     * following code pattern:
+     * <code>Unsafe.arrayIndexScale(Class)</code>. The matching logic below applies to the following
+     * code pattern:
      *
-     * <code> 
+     * <code>
      *      static final long byteArrayIndexShift;
      *      static {
-     *          long byteArrayIndexScale = Unsafe.getUnsafe().arrayIndexScale(byte[].class); 
+     *          long byteArrayIndexScale = Unsafe.getUnsafe().arrayIndexScale(byte[].class);
      *          if ((byteArrayIndexScale & (byteArrayIndexScale - 1)) != 0) {
-     *              throw new Error("data type scale not a power of two"); 
+     *              throw new Error("data type scale not a power of two");
      *          }
      *          byteArrayIndexShift = 31 - Integer.numberOfLeadingZeros(byteArrayIndexScale);
      *      }
@@ -487,6 +642,7 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
                  * array index scale.
                  */
 
+                SearchResult result = null;
                 ResolvedJavaField indexShiftField = null;
                 List<String> unsuccessfulReasons = new ArrayList<>();
                 Invoke numberOfLeadingZerosInvoke = methodCallTarget.invoke();
@@ -498,7 +654,8 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
                      */
                     SubNode subNode = numberOfLeadingZerosInvokeSubUsages.first();
                     if (subNodeComputesLog2(subNode, numberOfLeadingZerosInvoke)) {
-                        indexShiftField = extractValueStoreField(subNode, unsuccessfulReasons);
+                        result = extractValueStoreField(subNode, ArrayIndexShift, unsuccessfulReasons);
+                        indexShiftField = result.valueStoreField;
                     } else {
                         unsuccessfulReasons.add("The index array scale value provided by " + indexScaleValue + " is not used to calculate the array index shift.");
                     }
@@ -508,14 +665,21 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
 
                 if (indexShiftField != null) {
                     ResolvedJavaField finalIndexShiftField = indexShiftField;
-                    Supplier<ComputedValueField> supplier = () -> new ComputedValueField(finalIndexShiftField, null, Kind.ArrayIndexShift, arrayClass, null, true);
-                    if (tryAutomaticRecomputation(indexShiftField, Kind.ArrayIndexShift, supplier)) {
-                        reportSuccessfulAutomaticRecomputation(Kind.ArrayIndexShift, indexShiftField, arrayClass.getCanonicalName());
+                    Supplier<ComputedValueField> supplier = () -> new ComputedValueField(finalIndexShiftField, null, ArrayIndexShift, arrayClass, null, true);
+                    if (tryAutomaticRecomputation(indexShiftField, ArrayIndexShift, supplier)) {
+                        reportSuccessfulAutomaticRecomputation(ArrayIndexShift, indexShiftField, arrayClass.getCanonicalName());
                         return true;
                     }
                 } else {
                     if (!silentFailure) {
-                        reportUnsuccessfulAutomaticRecomputation(type, numberOfLeadingZerosInvoke, Kind.ArrayIndexShift, unsuccessfulReasons);
+                        /*
+                         * Passing null here for the computedField is ok, there is no actual field
+                         * that we can refer to in the error, and we check for null inside the
+                         * method.
+                         */
+                        if (result != null && result.illegalUseFound || !unsuccessfulReasons.isEmpty()) {
+                            reportUnsuccessfulAutomaticRecomputation(type, null, numberOfLeadingZerosInvoke, ArrayIndexShift, unsuccessfulReasons);
+                        }
                     }
                 }
             }
@@ -534,7 +698,7 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
         if (xValueNode.isJavaConstant() && xValueNode.asJavaConstant().getJavaKind() == JavaKind.Int) {
             PrimitiveConstant xValueConstant = (PrimitiveConstant) xValueNode.asJavaConstant();
             if (xValueConstant.asInt() == 31) {
-                assert yValueNode.equals(numberOfLeadingZerosInvokeNode);
+                assert yValueNode.equals(numberOfLeadingZerosInvokeNode.asNode());
                 return true;
             }
         }
@@ -542,7 +706,7 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
         if (yValueNode.isJavaConstant() && yValueNode.asJavaConstant().getJavaKind() == JavaKind.Int) {
             PrimitiveConstant yValueConstant = (PrimitiveConstant) yValueNode.asJavaConstant();
             if (yValueConstant.asInt() == 31) {
-                assert xValueNode.equals(numberOfLeadingZerosInvokeNode);
+                assert xValueNode.equals(numberOfLeadingZerosInvokeNode.asNode());
                 return true;
             }
         }
@@ -551,39 +715,87 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
     }
 
     /**
+     * Encodes the result of the left-hand-side analysis of an unsafe call, i.e., the search for a
+     * static final field where the unsafe value may be stored.
+     */
+    static final class SearchResult {
+        /** The field where the value is stored, if found. */
+        final ResolvedJavaField valueStoreField;
+        /**
+         * Uses that can lead to the unsafe value having side effects that we didn't account for are
+         * considered illegal.
+         */
+        final boolean illegalUseFound;
+
+        private SearchResult(ResolvedJavaField valueStoreField, boolean illegalUseFound) {
+            this.valueStoreField = valueStoreField;
+            this.illegalUseFound = illegalUseFound;
+        }
+
+        static SearchResult foundField(ResolvedJavaField offsetField) {
+            return new SearchResult(offsetField, false);
+        }
+
+        static SearchResult foundIllegalUse() {
+            return new SearchResult(null, true);
+        }
+
+        static SearchResult didNotFindIllegalUse() {
+            return new SearchResult(null, false);
+        }
+    }
+
+    /**
      * If the value produced by valueNode is stored into a static final field then that field is
      * returned. If the field is either not static or not final the method returns null and the
      * reason is recorded in the unsuccessfulReasons parameter.
      */
-    private static ResolvedJavaField extractValueStoreField(ValueNode valueNode, List<String> unsuccessfulReasons) {
+    private static SearchResult extractValueStoreField(ValueNode valueNode, Kind substitutionKind, List<String> unsuccessfulReasons) {
         ResolvedJavaField offsetField = null;
+        boolean illegalUseFound = false;
 
-        NodeIterable<Node> valueNodeUsages = valueNode.usages();
-        NodeIterable<StoreFieldNode> valueNodeStoreFieldUsages = valueNodeUsages.filter(StoreFieldNode.class);
-        NodeIterable<SignExtendNode> valueNodeSignExtendUsages = valueNodeUsages.filter(SignExtendNode.class);
-
-        if (valueNodeStoreFieldUsages.count() == 1) {
-            offsetField = valueNodeStoreFieldUsages.first().field();
-        } else if (valueNodeSignExtendUsages.count() == 1) {
-            SignExtendNode signExtendNode = valueNodeSignExtendUsages.first();
-            NodeIterable<StoreFieldNode> signExtendFieldStoreUsages = signExtendNode.usages().filter(StoreFieldNode.class);
-            if (signExtendFieldStoreUsages.count() == 1) {
-                offsetField = signExtendFieldStoreUsages.first().field();
+        /*
+         * Cycle through all usages looking for the field where the value may be stored. The search
+         * continues until all usages are exhausted or an illegal use is found.
+         */
+        outer: for (Node valueNodeUsage : valueNode.usages()) {
+            if (valueNodeUsage instanceof StoreFieldNode && offsetField == null) {
+                offsetField = ((StoreFieldNode) valueNodeUsage).field();
+            } else if (valueNodeUsage instanceof SignExtendNode && offsetField == null) {
+                SignExtendNode signExtendNode = (SignExtendNode) valueNodeUsage;
+                for (Node signExtendNodeUsage : signExtendNode.usages()) {
+                    if (signExtendNodeUsage instanceof StoreFieldNode && offsetField == null) {
+                        offsetField = ((StoreFieldNode) signExtendNodeUsage).field();
+                    } else if (isAllowedUnsafeValueSink(signExtendNodeUsage)) {
+                        continue;
+                    } else {
+                        illegalUseFound = true;
+                        break outer;
+                    }
+                }
+            } else if (isAllowedUnsafeValueSink(valueNodeUsage)) {
+                continue;
+            } else {
+                illegalUseFound = true;
+                break;
             }
         }
 
-        if (offsetField != null) {
+        if (offsetField != null && !illegalUseFound) {
             if (offsetField.isStatic() && offsetField.isFinal()) {
-                return offsetField;
+                /* Success! We found the static final field where this value is stored. */
+                return SearchResult.foundField(offsetField);
             } else {
-                if (!offsetField.isStatic()) {
-                    unsuccessfulReasons.add("The offset field " + offsetField.format("%H.%n") + " is not static.");
-                }
-                if (!offsetField.isFinal()) {
-                    unsuccessfulReasons.add("The offset field " + offsetField.format("%H.%n") + " is not final.");
-                }
+                String message = "The field " + offsetField.format("%H.%n") + ", where the value produced by the " + kindAsString(substitutionKind) +
+                                " computation is stored, is not" + (!offsetField.isStatic() ? " static" : "") + (!offsetField.isFinal() ? " final" : "") + ".";
+                unsuccessfulReasons.add(message);
+                /* Value is stored to a non static final field. */
+                return SearchResult.foundIllegalUse();
             }
-        } else {
+        }
+
+        if (illegalUseFound) {
+            /* No static final store field was found and the value has illegal usages. */
             String producer;
             String operation;
             if (valueNode instanceof Invoke) {
@@ -597,10 +809,43 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
                 throw VMError.shouldNotReachHere();
             }
             String message = "Could not determine the field where the value produced by the " + producer +
-                            " is stored. The " + operation + " is not directly followed by a field store or by a sign extend node followed directly by a field store. ";
+                            " for the " + kindAsString(substitutionKind) + " computation is stored. The " + operation +
+                            " is not directly followed by a field store or by a sign extend node followed directly by a field store. ";
             unsuccessfulReasons.add(message);
+            return SearchResult.foundIllegalUse();
         }
-        return null;
+
+        /* No static final store field was found but value does have any illegal usages. */
+        return SearchResult.didNotFindIllegalUse();
+    }
+
+    /**
+     * Determine if the valueNodeUsage parameter is an allowed usage of an offset, indexScale or
+     * indexShift unsafe value.
+     */
+    private static boolean isAllowedUnsafeValueSink(Node valueNodeUsage) {
+        if (valueNodeUsage instanceof FrameState) {
+            /*
+             * The frame state keeps track of the local variables and operand stack at a particular
+             * point in the abstract interpretation. This usage can be ignored for the purpose of
+             * this analysis.
+             */
+            return true;
+        }
+        if (valueNodeUsage instanceof MethodCallTargetNode) {
+            /*
+             * Passing the value as a parameter to certain methods, like Unsafe methods that read
+             * and write memory based on it, is allowed. Passing an unsafe value as a parameter is
+             * sound as long as the called method doesn't propagate the value to a dissalowed usage,
+             * e.g., like a store to a field that we would then miss.
+             */
+            MethodCallTargetNode methodCallTarget = (MethodCallTargetNode) valueNodeUsage;
+            ResolvedJavaMethod targetMethod = methodCallTarget.targetMethod();
+            if (targetMethod.getDeclaringClass().equals(resolvedUnsafeClass)) {
+                return true;
+            }
+        }
+        return false;
     }
 
     /**
@@ -656,6 +901,14 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
         }
     }
 
+    private static void reportSkippedSubstitution(ResolvedJavaType type) {
+        if (Options.UnsafeAutomaticSubstitutionsLogLevel.getValue() >= DEBUG_LEVEL) {
+            String msg = "Warning: Skipped automatic unsafe substitutions analysis for type " + type.getName() +
+                            ". The entire type is substituted, therefore its class initializer is eliminated.";
+            System.out.println(msg);
+        }
+    }
+
     private static void reportUnnecessarySubstitution(ResolvedJavaField offsetField, ComputedValueField computedSubstitutionField) {
         if (Options.UnsafeAutomaticSubstitutionsLogLevel.getValue() >= BASIC_LEVEL) {
             Kind kind = computedSubstitutionField.getRecomputeValueKind();
@@ -663,7 +916,7 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
             String annotatedFieldStr = computedSubstitutionField.getAnnotated().format("%H.%n");
             String offsetFieldStr = offsetField.format("%H.%n");
 
-            String msg = "Detected unnecessary " + kindStr + " " + annotatedFieldStr + " substitution field for " + offsetFieldStr + ". ";
+            String msg = "Warning: Detected unnecessary " + kindStr + " " + annotatedFieldStr + " substitution field for " + offsetFieldStr + ". ";
             msg += "The annotated field can be removed. This " + kind + " computation can be detected automatically. ";
             msg += "Use option -H:+" + Options.UnsafeAutomaticSubstitutionsLogLevel.getName() + "=" + INFO_LEVEL + " to print all automatically detected substitutions. ";
 
@@ -676,8 +929,7 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
             String substitutionKindStr = RecomputeFieldValue.class.getSimpleName() + "." + substitutionKind;
             String substitutedFieldStr = substitutedField.format("%H.%n");
 
-            String msg = substitutionKindStr + " substitution automatically registered for " + substitutedFieldStr + ", target element " + target + ".";
-
+            String msg = "Info:" + substitutionKindStr + " substitution automatically registered for " + substitutedFieldStr + ", target element " + target + ".";
             System.out.println(msg);
         }
     }
@@ -689,7 +941,7 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
             String offsetFieldStr = offsetField.format("%H.%n");
             String overwrittenFieldStr = overwrittenField.format("%H.%n");
 
-            String msg = "The " + overwrittenKindStr + " " + overwrittenFieldStr + " substitution was overwritten. ";
+            String msg = "Info: The " + overwrittenKindStr + " " + overwrittenFieldStr + " substitution was overwritten. ";
             msg += "A " + newKindStr + " substitution for " + offsetFieldStr + " was automatically registered.";
 
             System.out.println(msg);
@@ -701,7 +953,7 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
             String fieldStr = field.format("%H.%n");
             String substitutionKindStr = RecomputeFieldValue.class.getSimpleName() + "." + substitutionKind;
 
-            String msg = "The " + substitutionKindStr + " substitution for " + fieldStr + " could not be recomputed automatically because a conflicting substitution was detected. ";
+            String msg = "Warning: The " + substitutionKindStr + " substitution for " + fieldStr + " could not be recomputed automatically because a conflicting substitution was detected. ";
             msg += "Conflicting substitution: " + conflictingSubstitution;
             msg += "Add a " + substitutionKindStr + " manual substitution for " + fieldStr + ". ";
 
@@ -709,7 +961,7 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
         }
     }
 
-    private void reportUnsuccessfulAutomaticRecomputation(ResolvedJavaType type, Invoke invoke, Kind substitutionKind, List<String> reasons) {
+    private void reportUnsuccessfulAutomaticRecomputation(ResolvedJavaType type, ResolvedJavaField computedField, Invoke invoke, Kind substitutionKind, List<String> reasons) {
         String msg = "";
         if (Options.UnsafeAutomaticSubstitutionsLogLevel.getValue() >= BASIC_LEVEL) {
             if (!suppressWarningsFor(type) || Options.UnsafeAutomaticSubstitutionsLogLevel.getValue() >= DEBUG_LEVEL) {
@@ -718,18 +970,21 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
 
                 msg += substitutionKindStr + " automatic substitution failed. ";
                 msg += "The automatic substitution registration was attempted because ";
-                if (substitutionKind == Kind.ArrayIndexShift) {
-                    msg += "an " + Kind.ArrayIndexScale + " computation followed by a call to " + invokeStr + " ";
+                if (substitutionKind == ArrayIndexShift) {
+                    msg += "an " + ArrayIndexScale + " computation followed by a call to " + invokeStr + " ";
                 } else {
                     msg += "a call to " + invokeStr + " ";
                 }
                 msg += "was detected in the static initializer of " + type.toJavaName() + ". ";
-                msg += "Add a " + substitutionKindStr + " manual substitution for " + type.toJavaName() + ". ";
+                if (computedField != null) {
+                    /* If the computed field is null then reasons will contain the details. */
+                    msg += "Add a " + substitutionKindStr + " manual substitution for " + computedField.format("%H.%n") + ". ";
+                }
+                msg += "Detailed failure reason(s): " + reasons.stream().collect(Collectors.joining(", "));
             }
         }
 
         if (Options.UnsafeAutomaticSubstitutionsLogLevel.getValue() >= DEBUG_LEVEL) {
-            msg += "Detailed failure reason(s): " + reasons.stream().collect(Collectors.joining(", ")) + ". ";
             if (suppressWarningsFor(type)) {
                 msg += "(This warning is suppressed by default because this type ";
                 if (warningsAreWhiteListed(type)) {
@@ -745,7 +1000,22 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
         }
 
         if (!msg.isEmpty()) {
-            System.out.println(msg);
+            System.out.println("Warning: " + msg);
+        }
+    }
+
+    private static String kindAsString(Kind substitutionKind) {
+        switch (substitutionKind) {
+            case FieldOffset:
+                return "field offset";
+            case ArrayBaseOffset:
+                return "array base offset";
+            case ArrayIndexScale:
+                return "array index scale";
+            case ArrayIndexShift:
+                return "array index shift";
+            default:
+                throw VMError.shouldNotReachHere("Unexpected substitution kind: " + substitutionKind);
         }
     }
 
@@ -754,7 +1024,7 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
     }
 
     private boolean warningsAreWhiteListed(ResolvedJavaType type) {
-        return supressWarnings.contains(type);
+        return suppressWarnings.contains(type);
     }
 
     private ResolvedJavaType findSubstitutionType(ResolvedJavaType type) {
@@ -771,12 +1041,31 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
 
         StructuredGraph graph = new StructuredGraph.Builder(options, debug).method(clinit).build();
         HighTierContext context = new HighTierContext(GraalAccess.getOriginalProviders(), null, OptimisticOptimizations.NONE);
+        graph.setGuardsStage(GuardsStage.FIXED_DEOPTS);
+
+        GraphBuilderPhase.Instance builderPhase = new ClassInitializerGraphBuilderPhase(context, GraphBuilderConfiguration.getDefault(plugins).withEagerResolving(true),
+                        context.getOptimisticOptimizations());
         builderPhase.apply(graph, context);
+
+        /*
+         * We know that the Unsafe methods that we look for don't throw any checked exceptions.
+         * Replace the InvokeWithExceptionNode with InvokeNode.
+         */
+        for (InvokeWithExceptionNode invoke : graph.getNodes(InvokeWithExceptionNode.TYPE)) {
+            if (noCheckedExceptionsSet.contains(invoke.callTarget().targetMethod())) {
+                invoke.replaceWithInvoke();
+            }
+        }
+        /* Disable canonicalization of LoadFieldNodes to avoid constant folding of unsafe values. */
+        CanonicalizerPhase.createWithoutReadCanonicalization().apply(graph, context);
 
         return graph;
     }
 
     private static boolean isInvokeTo(Invoke invoke, ResolvedJavaMethod method) {
+        if (method == null) {
+            return false;
+        }
         ResolvedJavaMethod targetMethod = invoke.callTarget().targetMethod();
         return method.equals(targetMethod);
     }
@@ -788,8 +1077,8 @@ public class UnsafeAutomaticSubstitutionProcessor extends SubstitutionProcessor 
 
         private final HashSet<ResolvedJavaMethod> neverInline;
 
-        StaticInitializerInlineInvokePlugin(ResolvedJavaMethod[] neverInline) {
-            this.neverInline = new HashSet<>(Arrays.asList(neverInline));
+        StaticInitializerInlineInvokePlugin(HashSet<ResolvedJavaMethod> neverInline) {
+            this.neverInline = neverInline;
         }
 
         @Override
